<resources>
    <string name="app_name">StoryApp</string>
    <string name="title_home">Welcome to StoryApp %1$s!!!</string>
    <string name="logout">Logout</string>
    <string name="image_welcome">Application Logo</string>
    <string name="title_welcome">Welcome to Story App!!!</string>
    <string name="title_desc">Title Description</string>
    <string name="message_welcome">Hello There!!\nThis is an application that share dicoding users story</string>
    <string name="message_desc">Message Description</string>
    <string name="login">Login</string>
    <string name="login_welcome">Login Button</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Register</string>
    <string name="signup_welcome">SignUp Button</string>
    <string name="title_login_page">Login Page</string>
    <string name="title_signup_page">Register Page</string>
    <string name="name">Name</string>
    <string name="user_story_photo">User Story Photo</string>
    <string name="username_user">Username</string>
    <string name="add_story">Add New Story</string>
    <string name="detail_story_photo">Detail Story Photo</string>
    <string name="description">Story Description</string>
    <string name="pass_validation">Password at least 6 characters</string>
    <string name="camera_x">camera</string>
    <string name="gallery">gallery</string>
    <string name="upload">upload</string>
    <string name="add_photo">Add Photo</string>
    <string name="take_photo">Take a photo</string>
    <string name="choose_photo">choose photo</string>
    <string name="upload_photo">upload photo</string>
    <string name="photo_description">Photo Description</string>
    <string name="title_activity_maps">Story Maps</string>
    <string name="user_story_map">Dicoding User Story Map</string>
    <string name="check_password">Password at least 6 characters</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="map_title">Dicoding User Location</string>
    <string name="retry">Try Again!</string>
    <string name="regis_status">Register Success</string>
    <string name="login_status">Login Success</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="languange_setting">Languange Setting</string>
    <string name="login_image">Login Logo</string>
    <string name="registration_logo">Registration Logo</string>
    <string name="upload_status">Success</string>
</resources>