<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".camera.CameraActivity">

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="331dp"
        android:layout_height="427dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="35dp"
        android:contentDescription="@string/add_photo"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131"
        app:srcCompat="@drawable/ic_add_photo" />

    <Button
        android:id="@+id/cameraXButton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/take_photo"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:text="@string/camera_x"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView"
        app:layout_constraintVertical_bias="0.789" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/choose_photo"
        android:text="@string/gallery"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView"
        app:layout_constraintVertical_bias="0.789" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="7android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/upload_photo"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/photoDescEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/photo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>